# zeroclaw-plugins-main

./: .gitignore  registry.json
libs/solana-core/: Cargo.toml  README.md
libs/solana-core/src/: amount.rs  encoding.rs  instruction.rs  lib.rs  message.rs  nonce.rs  pay.rs  policy.rs  pubkey.rs  rpc.rs
libs/solana-core/tests/: vectors.rs
plugins/linq/: Cargo.toml
plugins/my-plugin/: Cargo.toml  README.md  RUNNING_WITH_ZEROCLAW.md  manifest.toml
plugins/my-plugin/src/: core.rs  lib.rs
plugins/payment-watch/: Cargo.toml  README.md  manifest.toml
plugins/payment-watch/src/: core.rs  lib.rs
plugins/payment-watch/tests/: core.rs
plugins/solana-pay-request/: Cargo.toml  README.md  manifest.toml
plugins/solana-pay-request/src/: core.rs  lib.rs
plugins/solana-pay-request/tests/: core.rs
plugins/spl-transfer-build/: Cargo.toml  LICENSE  README.md  RUNNING_WITH_ZEROCLAW.md  manifest.toml
plugins/spl-transfer-build/src/: core.rs  lib.rs
plugins/spl-transfer-build/tests/: core.rs
