[package]
name = "solana-core-wasi"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Minimal Solana substrate for wasm32-wasip2 WIT components: JSON-RPC shapes, base58, message serialization, instruction builders, durable nonces, Solana Pay URLs. No solana-sdk, no getrandom, no sockets."
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bs58 = { version = "0.5", default-features = false, features = ["alloc", "std"] }
sha2 = { version = "0.10", default-features = false }
curve25519-dalek = { version = "4", default-features = false, features = ["alloc"] }

[workspace]
