[package]
name = "solana-pay-request"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "ZeroClaw T1 tool plugin that creates unsigned Solana Pay transfer URLs."
publish = false

[lib]
name = "solana_pay_request"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
wit-bindgen = "0.46"
solana-core-wasi = { path = "../../libs/solana-core" }

[profile.release]
opt-level = "z"
lto = true
strip = true

[workspace]
