[package]
name = "spl-transfer-build"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "ZeroClaw tool plugin: builds an unsigned SPL token transfer transaction (T1, no custody)."
publish = false

[lib]
name = "spl_transfer_build"
# cdylib -> compiled as the wasm32-wasip2 component the host loads.
# rlib   -> lets `cargo test` exercise core.rs on the host with zero wasm toolchain.
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "1"
wit-bindgen = "0.46"
solana-core-wasi = { path = "../../libs/solana-core" }

# Only pulled in for the wasm target. Keep the core dependency-free of these.
[target.'cfg(target_family = "wasm")'.dependencies]
waki = { version = "0.5.1", features = ["json"] }

[profile.release]
opt-level = "z"
lto = true
strip = true

# Keep this plugin independently buildable when checked out beneath the
# ZeroClaw plugins repository.
[workspace]
